mcp-mo/tf/lb_listners.tf
// create a public listner on port 80
resource "aws_lb_listener" "port_80" {
  port              = 80
  load_balancer_arn = aws_lb.load_balancer.arn

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      query       = "query"
      protocol    = "HTTPS"
      host        = "#{host}"
      path        = "/#{path}"
      status_code = "HTTP_301"
    }
  }
}


// create a public listner on port 9090 for prometheus
resource "aws_lb_listener" "port_9090" {
  port              = 9090
  load_balancer_arn = aws_lb.load_balancer.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.target_group_port_9090.arn
  }
}


// create a secure listner on port 443
resource "aws_lb_listener" "port_443" {
  port              = 443
  protocol          = "HTTPS"
  load_balancer_arn = aws_lb.load_balancer.arn
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = local.config_data.certificate_arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.target_group_port_80.arn
  }
}
